[gd_scene load_steps=10 format=3 uid="uid://b3hmh8upxlg8x"]

[ext_resource type="Script" uid="uid://vot3tmfadcni" path="res://Scripts/options.gd" id="1_5hy3q"]
[ext_resource type="Texture2D" uid="uid://cydnohtkyqag0" path="res://Assets/Level-background/Main_menu.jpg" id="1_qqnya"]
[ext_resource type="FontFile" uid="uid://kb47qdt1kowx" path="res://Assets/Fonts/HomeVideoBold-R90Dv.ttf" id="2_hg628"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hg628"]
texture = ExtResource("1_qqnya")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cbhj7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6f4k2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q4at1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5hy3q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bdxpv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5hy3q")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hg628")

[node name="Master Volume Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -233.0
offset_right = -265.0
offset_bottom = -198.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Master Volume"

[node name="Master Volume" type="HSlider" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -449.0
offset_top = -201.0
offset_right = 448.0
offset_bottom = -185.0
grow_horizontal = 2
grow_vertical = 2
min_value = -80.0
max_value = 24.0

[node name="Music Volume Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -447.0
offset_top = -186.0
offset_right = -264.0
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Music Volume"

[node name="Music Volume" type="HSlider" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -154.0
offset_right = 449.0
offset_bottom = -138.0
grow_horizontal = 2
grow_vertical = 2
min_value = -80.0
max_value = 24.0

[node name="Button Volume Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -137.0
offset_right = -265.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Button Volume"

[node name="Button Volume" type="HSlider" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -449.0
offset_top = -107.0
offset_right = 446.0
offset_bottom = -87.0
grow_horizontal = 2
grow_vertical = 2
min_value = -80.0
max_value = 24.0

[node name="Mute" type="CheckButton" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -455.0
offset_top = -81.0
offset_right = -217.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_cbhj7")
text = "Mute"

[node name="Mute Music" type="CheckButton" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -80.5
offset_right = 96.0
offset_bottom = -37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_6f4k2")
text = "Mute Music"

[node name="Mute Buttons" type="CheckButton" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 236.5
offset_top = -79.5
offset_right = 449.5
offset_bottom = -36.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_6f4k2")
text = "Mute Buttons
"

[node name="Resolution Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -30.0
offset_right = -265.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Resolution"

[node name="Resolution" type="OptionButton" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -29.0
offset_right = -49.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_q4at1")
fit_to_longest_item = false

[node name="FullScreen" type="CheckButton" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -453.0
offset_top = 13.0
offset_right = -215.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_cbhj7")
button_pressed = true
text = "FullScreen"

[node name="reset" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = 69.0
offset_right = -136.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_hg628")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_5hy3q")
text = "Reset To Defaults"

[node name="SaveSettings" type="Button" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 201.0
offset_top = 69.0
offset_right = 443.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_hg628")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_bdxpv")
text = "Save Settings"

[node name="back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 167.0
offset_right = 64.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_hg628")
theme_override_font_sizes/font_size = 50
text = "Back"

[connection signal="value_changed" from="Panel/Master Volume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="Panel/Music Volume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="Panel/Button Volume" to="." method="_on_button_volume_value_changed"]
[connection signal="toggled" from="Panel/Mute" to="." method="_on_mute_toggled"]
[connection signal="toggled" from="Panel/Mute Music" to="." method="_on_mute_music_toggled"]
[connection signal="toggled" from="Panel/Mute Buttons" to="." method="_on_mute_buttons_toggled"]
[connection signal="item_selected" from="Panel/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="toggled" from="Panel/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="pressed" from="Panel/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Panel/SaveSettings" to="." method="_on_save_settings_pressed"]
[connection signal="mouse_entered" from="back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
